# Copyright 2025 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("../../../config.gni")

declare_args() {
  root_path = rebase_path("../../..")
}

source_set("LynxTextra") {
  include_dirs = [
    "$root_path/public",
    "//ROOT",
  ]

  defines = [ "TTTEXT_OS_IOS" ]

  metadata = {
    header_mappings_dir = [ "public" ]
  }

  deps = [ "$root_path/src:textlayout" ]
}
group("LynxTextra_podspecs_group") {
  deps = [ ":LynxTextra" ]
}
group("LynxTextra_subspecs_group") {
  deps = []
}

source_set("get_ios_base_configs") {
  sources = []
}
